added bottom padding to each row

--- a/_layouts/allteams.html
+++ b/_layouts/allteams.html
@@ -16,7 +16,7 @@ layout: default
     </div>
 
     <!-- Show 2 posts for each team -->
-    <div class="row">
+    <div class="row" style="padding-bottom: 10px;">
       {% comment %} sort: "position", "last" means teams with no
       position set will go at the end of the list. Positions can easily
       be changed by dragging-and-dropping the team names in the siteleaf
