--- a/_layouts/allteams.html
+++ b/_layouts/allteams.html
@@ -16,14 +16,14 @@ layout: default
     </div>
 
     <!-- Show 2 posts for each team -->
-    <div class="row" style="padding-bottom: 10px;">
+    <div class="row">
       {% comment %} sort: "position", "last" means teams with no
       position set will go at the end of the list. Positions can easily
       be changed by dragging-and-dropping the team names in the siteleaf
       interface. {% endcomment %}
       {% assign sorted_teams = (site.teams | sort: "position", "last") %}
       {% for team in sorted_teams %}
-        <div class="col-12 col-md-6 col-lg-4">
+        <div class="col-12 col-md-6 col-lg-4" style="padding-bottom: 10px;">
 
           <h3>
               <a class="team-title" href="{{ team.url | relative_url }}">{{ team.title }}</a>
