--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: default
                   <a href="calendar" class="btn btn-block btn-primary">All upcoming events</a></br>
               </div>
               <div class="col-12 col-md-4">
-                  <a href="archive" class="btn btn-block btn-secondary">Archive</a>
+                  <a href="archive" class="btn btn-block btn-secondary">News</a>
               </div>
           </div>
 
@@ -57,8 +57,8 @@ layout: default
         <p>Check out our <a href="teams">teams page</a> for more upcoming events!</p>
         <div class="post-list">
 
-          {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
-          {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
+          {% assign featured_posts = (site.posts | where_exp:"post","post['is featured'] == true") %}
+          {% assign not_featured_posts = (site.posts | where_exp:"post","post['is featured'] == false") %}
 
           {% assign posts_to_sort = featured_posts %}
           {% include sort-by-date.html %}
