--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,9 +60,9 @@ layout: default
           {% assign featured_posts = (site.posts | where_exp:"post","post['is featured'] == true") %}
           {% assign not_featured_posts = (site.posts | where_exp:"post","post['is featured'] == false") %}
 
-<!--          {% assign posts_to_sort = featured_posts %}
+          {% assign posts_to_sort = featured_posts %}
           {% include sort-by-date.html %}
-	  {% assign featured_posts = S_posts %}-->
+	  {% assign featured_posts = S_posts %}
 
           {% assign curDate = site.time | date: '%s' %}
           {% for post in featured_posts %}
@@ -73,13 +73,13 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.event-end-date | date: '%s' %}
             {% endif %}
-            {% if postEndDate >= curDate - 3 %}
+<!--            {% if postEndDate >= curDate - 3 %}-->
             <hr class="mt-0 mb-2">
           <!-- BADGE FOR FEATURED POSTS -->
 <!--             <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
-            {% endif %}
+<!--            {% endif %}-->
           {% endfor %}
 
         </div><!-- END BLOG POSTS -->
