--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,22 +55,31 @@ layout: default
         <!-- Blog Posts -->
         <h3>Featured Actions, Events, and News</h3>
         <p>Check out our <a href="teams">teams page</a> for more upcoming events!</p>
-<div class="post-list">
+        <div class="post-list">
 
           {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
           {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
 
-          {% for post in featured_posts %}
-            <hr class="mt-0 mb-2">
-            <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>
-            <!-- POST TEMPLATE -->
-            {% include post-list.html %}
-          {% endfor %}
+          {% assign posts_to_sort = featured_posts %}
+          {% include sort-by-date.html %}
+	        {% assign featured_posts = S_posts %}
 
-          {% for post in not_featured_posts limit:10 %}
+          {% assign curDate = site.time | date: '%s' %}
+          {% for post in featured_posts %}
+            {% if post.categories contains 'event' %}
+              {% assign postEndDate = post.event-start-date | date: '%s' %}
+            {% elsif post.categories contains 'action' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% elsif post.categories contains 'update' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% endif %}
+            {% if postEndDate >= curDate - 3 %}
             <hr class="mt-0 mb-2">
+          <!-- BADGE FOR FEATURED POSTS -->
+             <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
+            {% endif %}
           {% endfor %}
 
         </div><!-- END BLOG POSTS -->
