--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,7 +76,7 @@ layout: default
             {% if postEndDate >= curDate - 3 %}
             <hr class="mt-0 mb-2">
           <!-- BADGE FOR FEATURED POSTS -->
-             <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>
+             <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>-->
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
             {% endif %}
