--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,7 +62,7 @@ layout: default
 
           {% for post in featured_posts %}
             <hr class="mt-0 mb-2">
-            <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>
+            <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>-->
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
           {% endfor %}
