--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,16 +61,19 @@ layout: default
           {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
 
           {% for post in featured_posts %}
-            <hr class="mt-0 mb-2">
-            <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>-->
-            <!-- POST TEMPLATE -->
-            {% include post-list.html %}
-          {% endfor %}
-
-          {% for post in not_featured_posts limit:10 %}
-            <hr class="mt-0 mb-2">
-            <!-- POST TEMPLATE -->
-            {% include post-list.html %}
+            {% if post.categories contains 'event' %}
+              {% assign postEndDate = post.event-start-date | date: '%s' %}
+            {% elsif post.categories contains 'action' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% elsif post.categories contains 'update' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% endif %}
+            {% if postEndDate >= curDate - 3 %}
+              <hr class="mt-0 mb-2">
+              <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span>-->
+              <!-- POST TEMPLATE -->
+              {% include post-list.html %}
+            {% endif %}
           {% endfor %}
 
         </div><!-- END BLOG POSTS -->
