--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -59,6 +59,10 @@ layout: default
 
           {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
 
+          {% assign posts_to_sort = featured_posts %}
+          {% include sort-by-date.html %}
+          {% assign featured_posts = S_posts %}
+          
           {% for post in featured_posts %}
             <hr class="mt-0 mb-2">
             <!-- POST TEMPLATE -->
