--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,12 +57,8 @@ layout: default
         <p>Check out our <a href="teams">teams page</a> for more upcoming events!</p>
         <div class="post-list">
 
-          {% assign featured_posts_unsorted = (site.posts|where_exp:"post","post['is featured'] == true") %}
+          {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
 
-          {% assign posts_to_sort = featured_posts_unsorted %}
-          {% include sort-by-date.html %}
-          {% assign featured_posts = S_posts %}
-          
           {% for post in featured_posts %}
             <hr class="mt-0 mb-2">
             <!-- POST TEMPLATE -->
