--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: default
   <div class="container">
 
       <div class="hidden-sm-up mt-3 mb-3">
-        <a href="join.html" class="btn btn-danger btn-block"><strong>Get Involved!</strong></a>
+        <a href="/join.html" class="btn btn-danger btn-block"><strong>Get Involved!</strong></a>
         {% if site.member-count %}
         <hr>
         <h5 class="d-flex"><span class="mt-1"><strong>{{ site.member-count }} Volunteers</strong></span> <a href="mailto:?subject=Join {{ site.title | escape }}&body=Join {{ site.url }} today!" class="btn btn-sm ml-auto btn-primary"><strong>Invite Friends!</strong></a></h5>
@@ -42,27 +42,44 @@ layout: default
       <div class="col-sm-8">
           <div class="row mt-4">
               <div class="col-12 col-md-4">
-                  <a href="actions" class="btn btn-block btn-danger">All current actions</a></br>
+                  <a href="/actions" class="btn btn-block btn-danger">All current actions</a></br>
               </div>
               <div class="col-12 col-md-4">
-                  <a href="calendar" class="btn btn-block btn-primary">All upcoming events</a></br>
+                  <a href="/calendar" class="btn btn-block btn-primary">All upcoming events</a></br>
               </div>
               <div class="col-12 col-md-4">
-                  <a href="archive" class="btn btn-block btn-secondary">News</a>
+                  <a href="/archive" class="btn btn-block btn-secondary">Archive</a>
               </div>
           </div>
 
         <!-- Blog Posts -->
         <h3>Featured Actions, Events, and News</h3>
-        <p>Check out our <a href="teams">teams page</a> for more upcoming events!</p>
+        <p>Check out our <a href="/teams">teams page</a> for more upcoming events!</p>
         <div class="post-list">
 
           {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
+          {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
 
+          {% assign posts_to_sort = featured_posts %}
+          {% include sort-by-date.html %}
+          {% assign featured_posts = S_posts %}
+
+          {% assign curDate = site.time | date: '%s' %}
           {% for post in featured_posts %}
+            {% if post.categories contains 'event' %}
+              {% assign postEndDate = post.event-start-date | date: '%s' %}
+            {% elsif post.categories contains 'action' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% elsif post.categories contains 'update' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% endif %}
+            {% if postEndDate >= curDate - 3 %}
             <hr class="mt-0 mb-2">
+          <!-- BADGE FOR FEATURED POSTS -->
+<!--             <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
+            {% endif %}
           {% endfor %}
 
         </div><!-- END BLOG POSTS -->
@@ -104,7 +121,7 @@ layout: default
           {% endfor %}
 
           <div class="pagination">
-            <a href="successes.html" class="btn btn-link btn-flush ml-auto">More successes &rarr;</a>
+            <a href="/successes.html" class="btn btn-link btn-flush ml-auto">More successes &rarr;</a>
           </div>
 
         {% endif %}
