--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -66,11 +66,11 @@ layout: default
 
           {% assign curDate = site.time | date: '%s' %}
           {% for post in featured_posts %}
-            {% if post.categories contains 'event' %}
+            {% if post.categories == 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
-            {% elsif post.categories contains 'action' %}
+            {% elsif post.categories == 'action' %}
               {% assign postEndDate = post.event-end-date | date: '%s' %}
-            {% elsif post.categories contains 'update' %}
+            {% elsif post.categories == 'update' %}
               {% assign postEndDate = post.event-end-date | date: '%s' %}
             {% endif %}
             <hr class="mt-0 mb-2">
