--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -61,8 +61,17 @@ layout: default
           {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
 
 
+	  {% assign curDate = site.time | date: '%s' %}
           {% for post in featured_posts %}
+	    {% if post.categories contains 'event' %}
+              {% assign postEndDate = post.event-start-date | date: '%s' %}
+            {% elsif post.categories contains 'action' %}
+              {% assign postEndDate = post.event-end-date | date: '%s' %}
+            {% elsif post.categories contains 'update' %}
+              {% assign postEndDate = post.date | date: '%s' %}
+            {% endif %}
             <hr class="mt-0 mb-2">
+	    <h2>{{ postEndDate }}
           <!-- BADGE FOR FEATURED POSTS -->
 	    <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
