--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -70,12 +70,13 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
+	    {% if postEndDate >= curDate - 3 %}
             <hr class="mt-0 mb-2">
-	    <h2>{{ postEndDate }}</h2>
           <!-- BADGE FOR FEATURED POSTS -->
 	    <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
+	    {% endif %}
           {% endfor %}
 
         </div><!-- END BLOG POSTS -->
