--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -72,6 +72,8 @@ layout: default
             {% endif %}
 	    {% if postEndDate >= curDate - 259200 %}
             <hr class="mt-0 mb-2">
+	    <h2>{{ postEndDate }}</h2>
+	    <h2>{{ curDate }}</h2>
           <!-- BADGE FOR FEATURED POSTS -->
 	    <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
