--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,6 +74,7 @@ layout: default
             <hr class="mt-0 mb-2">
 	    <h2>{{ postEndDate }}</h2>
 	    <h2>{{ curDate }}</h2>
+	    <h2>{{ curDate - 259200 }}</h2>
           <!-- BADGE FOR FEATURED POSTS -->
 	    <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
