--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,6 +62,7 @@ layout: default
 
 
 	  {% assign curDate = site.time | date: '%s' %}
+	  {% assign refDate = curDate - 259200 %}
           {% for post in featured_posts %}
 	    {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
@@ -74,7 +75,7 @@ layout: default
             <hr class="mt-0 mb-2">
 	    <h2>{{ postEndDate }}</h2>
 	    <h2>{{ curDate }}</h2>
-	    <h2>{{ curDate - 259200 }}</h2>
+	    <h2>{{ refDate }}</h2>
           <!-- BADGE FOR FEATURED POSTS -->
 	    <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
