--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,7 +62,7 @@ layout: default
 
 
 	  {% assign curDate = site.time | date: '%s' %}
-	  {% assign refDate = curDate - 259200 %}
+	  {% assign refDate = curDate | minus: 259200 %}
           {% for post in featured_posts %}
 	    {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
