--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,9 +71,9 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
-	    {% if postEndDate >= refDate %}
+	    {% if postEndDate >= curDate | minus 259200 %}
             <hr class="mt-0 mb-2">
-	    <h2>{{ postEndDate }}</h2>
+	    <h2>hi</h2>
           <!-- BADGE FOR FEATURED POSTS -->
 	    <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
