--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,7 +71,7 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
-	    {% if postEndDate > curDate | minus: 259200 %}
+	    {% if postEndDate > ( curDate | minus: 259200 ) %}
               <hr class="mt-0 mb-2">
 	      <h2>{{ postEndDate }}</h2>
               <!-- BADGE FOR FEATURED POSTS -->
