--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -60,6 +60,10 @@ layout: default
           {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
           {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
 
+	  {% assign posts_to_sort = featured_posts %}
+          {% include sort-by-date.html %}
+          {% assign featured_posts = S_posts %}
+
 
 	  {% assign curDate = site.time | date: '%s' %}
           {% for post in featured_posts %}
