--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: default
                   <a href="/calendar" class="btn btn-block btn-primary">All upcoming events</a></br>
               </div>
               <div class="col-12 col-md-4">
-                  <a href="/archive" class="btn btn-block btn-secondary">News</a>
+                  <a href="/archive" class="btn btn-block btn-secondary">Archive</a>
               </div>
           </div>
 
@@ -60,23 +60,27 @@ layout: default
           {% assign featured_posts = (site.posts|where_exp:"post","post['is featured'] == true") %}
           {% assign not_featured_posts = (site.posts|where_exp:"post","post['is featured'] == false") %}
 
-	  {% assign posts_to_sort = featured_posts %}
+          {% assign posts_to_sort = featured_posts %}
           {% include sort-by-date.html %}
           {% assign featured_posts = S_posts %}
 
-	  {% assign curDate = site.time | date: '%s' %}
+          {% assign curDate = site.time | date: '%s' %}
           {% for post in featured_posts %}
-	    {% if post.categories contains 'event' %}
+            {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
             {% elsif post.categories contains 'action' %}
               {% assign postEndDate = post.event-end-date | date: '%s' %}
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.event-end-date | date: '%s' %}
             {% endif %}
-              <hr class="mt-0 mb-2">
-              <!-- POST TEMPLATE -->
-              {% include post-list.html %}
-	    {% endfor %}
+            {% if postEndDate >= curDate - 3 %}
+            <hr class="mt-0 mb-2">
+          <!-- BADGE FOR FEATURED POSTS -->
+<!--             <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
+            <!-- POST TEMPLATE -->
+            {% include post-list.html %}
+            {% endif %}
+          {% endfor %}
 
         </div><!-- END BLOG POSTS -->
 
