--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -62,10 +62,10 @@ layout: default
 
           {% assign posts_to_sort = featured_posts %}
           {% include sort-by-date.html %}
-          {% assign featured_posts = S_posts %}
+          {% assign sorted_featured_posts = S_posts %}
 
           {% assign curDate = site.time | date: '%s' %}
-          {% for post in featured_posts %}
+          {% for post in sorted_featured_posts %}
             {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
             {% elsif post.categories contains 'action' %}
