--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,8 +64,10 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
+          {% assign sorted_featured_posts_home = (featured_posts | sort: 'date') | reverse %}
+          
           {% assign curDate = site.time | date: '%s' %}
-          {% for post in featured_posts %}
+          {% for post in sorted_featured_posts_home %}
             {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
             {% elsif post.categories contains 'action' %}
