--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,7 +48,7 @@ layout: default
                   <a href="/calendar" class="btn btn-block btn-primary">All upcoming events</a></br>
               </div>
               <div class="col-12 col-md-4">
-                  <a href="/archive" class="btn btn-block btn-secondary">Archive</a>
+                  <a href="/archive" class="btn btn-block btn-secondary">News</a>
               </div>
           </div>
 
@@ -67,7 +67,7 @@ layout: default
           {% assign sorted_featured_posts_home = (featured_posts | sort: 'date') | reverse %}
           
           {% assign curDate = site.time | date: '%s' %}
-          {% for post in S_events %}
+          {% for post in S_posts %}
             {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
             {% elsif post.categories contains 'action' %}
