--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,9 +31,9 @@ layout: default
 
       <div class="hidden-sm-up mt-3 mb-3">
         <a href="/join.html" class="btn btn-danger btn-block"><strong>Get Involved!</strong></a>
-        {% if site.member-count %}
+        {% if site.logo %}
         <hr>
-        <h5 class="d-flex"><span class="mt-1"><strong>{{ site.member-count }} Volunteers</strong></span> <a href="mailto:?subject=Join {{ site.title | escape }}&body=Join {{ site.url }} today!" class="btn btn-sm ml-auto btn-primary"><strong>Invite Friends!</strong></a></h5>
+	<h5 class="d-flex"><img src="{{ site.logo }}" /></h5>
         {% endif %}
       </div>
 
