Retried replacing volunteer count with logo

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -102,7 +102,7 @@ layout: default
         <!-- MEMBER COUND AND INVITE MEMBERS BUTTON -->
         <div class="hidden-xs-down">
           <hr class="mt-0 mb-4">
-	  {% if site.logo %}<img src="{{ site.logo }}" />
+	  {% if site.logo %}<img src="{{ site.logo }}" />{% endif %}
         </div>
 
         <!-- SUCCESSES -->
