Tweaked logo formatting

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,7 +53,7 @@ layout: default
           </div>
 
         <!-- Blog Posts -->
-        <h3>Featured Actions, Events, and News</h3>
+        <h3>Featured Actions and Events</h3>
         <p>Check out our <a href="/teams">teams page</a> for more upcoming events!</p>
         <div class="post-list">
 
@@ -101,7 +101,7 @@ layout: default
 
         <!-- MEMBER COUND AND INVITE MEMBERS BUTTON -->
         <div class="hidden-xs-down">
-          <hr class="mt-0 mb-4">
+          <hr class="mt-4 mb-3">
 	  {% if site.logo %}<img src="{{ site.logo }}" />{% endif %}
         </div>
 
