--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -102,7 +102,7 @@ layout: default
         <!-- MEMBER COUND AND INVITE MEMBERS BUTTON -->
         <div class="hidden-xs-down">
           <hr class="mt-4 mb-3">
-	  {% if site.logo %}<img src="{{ site.logo }}" style="height: 150px; width: auto;" />{% endif %}
+	  {% if site.logo %}<img src="{{ site.logo }}" style="height: 150px; width: auto; align: right;" />{% endif %}
         </div>
 
         <!-- SUCCESSES -->
