Trying to right-align logo image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,9 +100,9 @@ layout: default
       <div class="col-sm-4">
 
         <!-- MEMBER COUND AND INVITE MEMBERS BUTTON -->
-        <div class="hidden-xs-down">
+	<div class="hidden-xs-down" style="text-align: right;">
           <hr class="mt-4 mb-3">
-	  {% if site.logo %}<img src="{{ site.logo }}" style="height: 150px; width: auto; padding-left: auto;" />{% endif %}
+	  {% if site.logo %}<img src="{{ site.logo }}" style="height: 150px; width: auto;" />{% endif %}
         </div>
 
         <!-- SUCCESSES -->
