--- a/_includes/sort-by-date.html
+++ b/_includes/sort-by-date.html
@@ -37,7 +37,7 @@ The return variable is S_posts, the array of sorted posts.
     {% assign S_next_event = S_events[S_event_index] %}
     {% assign S_posts = (S_posts | push: S_next_event) %}
     {% assign S_used_events = (S_used_events | push: S_next_event) %}
-    {% assign S_event_index = S_used_events | size %}
+    {% assign S_event_index = (S_used_events | size) %}
     <p>Number of processed events: {{ S_event_index }}</p>
   {% else %}
     {% assign S_next_action = S_actions[S_action_index] %}
