--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -121,7 +121,7 @@ layout: default
           </ul>
           {% if page.RSVP-link %}
           <div class="card-block">
-            <a href="{{ page.RSVP-link | escape }}" class="btn btn-primary btn-block">RSVP</a>
+            <a href="{{ page.RSVP-link | escape }}" class="btn btn-primary btn-block" tartget="_blank">RSVP</a>
           </div>
           {% endif %}
           <!--Add IB team if event is tagged with teamtag-->
