--- a/_includes/sort-by-date.html
+++ b/_includes/sort-by-date.html
@@ -10,12 +10,15 @@ The return variable is S_posts, the array of sorted posts.
 
 {% assign S_isevent  = "post.categories contains 'event'" %}
 {% assign S_isaction  = "post.categories contains 'action'" %}
+{% assign S_isupdate = "post.categories contains 'update'" %}
 
 {% assign S_unsorted_events = (posts_to_sort|where_exp:"post",S_isevent) %}
 {% assign S_unsorted_actions = (posts_to_sort|where_exp:"post",S_isaction) %}
+{% assign S_unsorted_updates = (posts_to_sort|where_exp:"post",S_isupdate) %}
 
 {% assign S_events = (S_unsorted_events|sort:"event-start-date","last") %}
 {% assign S_actions = (S_unsorted_actions|sort:"event-end-date","last") %}
+{% assign S_updates = (S_unsorted_updates|sort:page.date,"last") %}
 
 {% assign S_ev_dates = (S_events | map: "event-start-date") %}
 {% assign S_act_dates = (S_actions | map: "event-end-date") %}
@@ -25,6 +28,10 @@ The return variable is S_posts, the array of sorted posts.
 {% assign S_action_index = 0 %}
 
 {% assign S_posts = site.emptyArray %}
+
+{% for S_update in S_updates %}
+  {% assign S_posts = S_posts | push: S_update %}
+{% endfor %}
 
 {% assign S_used_events = site.emptyArray %}
 {% assign S_used_actions = site.emptyArray %}
