Debugging date cutoff on home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -65,6 +65,9 @@ layout: default
           {% assign sorted_featured_posts = S_posts %}
 
           {% assign curDate = "now" | date: '%s' %}
+	  {% assign refDate = (curDate | minus 259200) %}
+	  <p>Current time is {{ curDate }}</p>
+	  <p>Reference time is {{ refDate}}</p>
           {% for post in S_posts %}
             {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' %}
@@ -73,13 +76,12 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
-            {% if postEndDate > (curDate | minus 259200) %}
             <hr class="mt-0 mb-2">
+	    <p>Post end date is {{ postEndDate }}</p>
           <!-- BADGE FOR FEATURED POSTS -->
 <!--             <span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
             <!-- POST TEMPLATE -->
             {% include post-list.html %}
-            {% endif %}
           {% endfor %}
 
         </div><!-- END BLOG POSTS -->
