--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,9 +64,9 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
-          {% assign curDate = "now" | date: '%s' %}
+          {% assign curDate = "now" | date: "%s" %}
           {% assign timeframe = 259200 %}
-	  {% assign refDate = ( "now" | date: '%s' | minus: timeframe ) %}
+	  {% assign refDate = ( "now" | date: "%s" | minus: timeframe ) %}
 	  <p>Current time is {{ curDate }}</p>
 	  <p>Reference time is {{ refDate }}</p>
           {% for post in S_posts %}
