--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,8 +64,7 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
-          {% assign curDate = "now" | date: "%s" %}
-	  {% assign curDate = (puts curDate.to_i)
+          {% assign curDate = ( "now" | date: "%s" | plus: 0 ) %}
           {% assign timeframe = 259200 %}
 	  {% assign refDate = ( curDate | minus: 259200 ) %}
 	  <p>Current time is {{ curDate }}</p>
