--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
-          {% assign curDate = ( "now" | date: "%s" | plus: 0 ) %}
+          {% assign curDate = ( "now" | date: "%s" | times:1 ) %}
           {% assign timeframe = 259200 %}
 	  {% assign refDate = ( curDate | minus: timeframe ) %}
 	  <p>Current time is {{ curDate }}</p>
