--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,9 +64,8 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
-          {% assign curDate = ( site.time | date: "%s" ) %}
+          {% assign curDate = ( site.date | date: "%s" ) %}
           {% assign timeframe = 259200 %}
-	  {% assign curDateIn = curDate.to_i %}
 	  {% assign refDate = ( curDate | minus: timeframe ) %}
 	  <p>Current time is {{ curDate }}</p>
 	  <p>Reference time is {{ refDate }}</p>
