--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
-          {% assign curDate = ( site.date | date: "%s" ) %}
+          {% assign curDate = ( site.time | date: "%s" ) %}
           {% assign timeframe = 259200 %}
 	  {% assign refDate = ( curDate | minus: timeframe ) %}
 	  <p>Current time is {{ curDate }}</p>
