Set homepage to show only recent and future events

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,11 +75,8 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
-	    {% if postEndDate >= refDate %}
+	    {% if postEndDate > refDate %}
               <hr class="mt-0 mb-2">
-              <!-- BADGE FOR FEATURED POSTS -->
-              <!--<span class="badge {% if post.categories contains 'action' %}badge-danger{% else %}badge-primary{% endif %}">PINNED</span> -->
-              <!-- POST TEMPLATE -->
               {% include post-list.html %}
 	    {% endif %}
           {% endfor %}
