Set homepage to show only recent and future events

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
-	    {% if postEndDate > refDate %}
+	    {% if postEndDate > curDate %}
               <hr class="mt-0 mb-2">
               {% include post-list.html %}
 	    {% endif %}
