--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,8 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' %}
             {% endif %}
-	    {% if postEndDate > ( curDate | minus: timeframe ) %}
+	    {% if postEndDate > refDate %}
+		
               <hr class="mt-0 mb-2">
               {% include post-list.html %}
 	    {% endif %}
