--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,9 +67,6 @@ layout: default
           {% assign curDate = site.time | date: '%s' %}
           {% assign timeframe = 259200 %}
 	  {% assign refDate = curDate | minus: timeframe %}
-          <p>{{ refDate }}</p>
-          {% assign refDateIn = refDate | times: 1 %}
-          <p>{{ refDateIn }}</p>
           {% for post in S_posts %}
             {% if post.categories contains 'event' %}
               {% assign postEndDate = post.event-start-date | date: '%s' | times: 1 %}
@@ -78,7 +75,7 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' | times: 1 %}
             {% endif %}
-	    {% if postEndDate > refDateIn %}
+	    {% if postEndDate > refDate %}
 		
               <hr class="mt-0 mb-2">
               {% include post-list.html %}
