Add partner badge to site

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -89,6 +89,10 @@ a:hover, a:active {
   background-color: #d216c6;
 }
 
+.badge-partner {
+  background-color: #127025;
+}
+
 .btn-action {
   width: 6.25rem;
   height: 6.25rem;
