--- a/_includes/event-post-header.html
+++ b/_includes/event-post-header.html
@@ -6,7 +6,10 @@
         {% if post.event-start-date %}
         <div class="col-2 col-sm-3 col-lg-2">
           <center>
-            <span class="badge badge-primary">Event</span>
+		  {% if post.tags contains 'partner' %}
+		    <span class="badge badge-partner">Partner Event</span>
+		  {% else %}
+		    <span class="badge badge-primary">Event</span>
             <p class="mb-1 mt-1">{{ post.event-start-date | date: "%b" }}</p>
             {% if short-post %}
             <h4 class="itemdate">
