debugging partner badge

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -93,7 +93,7 @@ a:hover, a:active {
   background-color: #127025;
 }
 
-a.text-danger:focus, a.text-danger:hover {
+a.text-partner:focus, a.text-partner:hover {
   color: #127025;
 }
 
