--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@ layout: default
             {% elsif post.categories contains 'update' %}
               {% assign postEndDate = post.date | date: '%s' | times: 1 %}
             {% endif %}
-	    {% if postEndDate > refDate %}
+	    {% if postEndDate > curDate %}
 		
               <hr class="mt-0 mb-2">
               {% include post-list.html %}
