--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,7 +64,7 @@ layout: default
           {% include sort-by-date.html %}
           {% assign sorted_featured_posts = S_posts %}
 
-          {% assign curDate = site.time | date: '%s' %}
+          {% assign curDate = site.time | date: '%s' | times: 1 %}
           {% assign timeframe = 0 %}
 	  {% assign refDate = curDate | minus: timeframe %}
           {% for post in S_posts %}
