Update homepage to only show future events

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,6 +68,8 @@ layout: default
           {% assign timeframe = 0 %}
 	  {% assign refDate = curDate | minus: timeframe %}
 	  <p>{{ curDate }}</p>
+	  <p>Number of events is {{ S_events | size }}</p>
+	  <p>Number of actions is {{ S_actions | size }}</p>
 	  <p>Number of posts is {{ S_posts | size }}</p>
           {% for post in S_posts %}
             {% if post.categories contains 'event' %}
