--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% assign email-domain = "@indivisiblehi.org" %}
+{% assign email-domain = "@indivisiblehawaii.org" %}
 {% assign email-subscribe = (page.team-email | append: "+subscribe" | append: email-domain) %}
 {% assign email-owner = (page.team-email | append: "+owner" | append: email-domain) %}
 {% assign email-list = (page.team-email | append: email-domain) %}
