--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -105,6 +105,9 @@
           <div class="col-sm-9">
             <h5 class="mt-2 mb-3">Contact {{ site.title | escape }}</h5>
             <a class="btn btn-danger" href="mailto:{{ site.email }}">{{ site.email }}</a></a>
+    	    {% if site.address %}
+	      <span>{{ site.address }}</span>
+	    {% endif %}
           </div>
         </div>
       </div>
