--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -106,7 +106,7 @@
             <h5 class="mt-2 mb-3">Contact {{ site.title | escape }}</h5>
             <a class="btn btn-danger" href="mailto:{{ site.email }}">{{ site.email }}</a></a>
     	    {% if site.address %}
-	      <span>{{ site.address }}</span>
+	      <p>{{ site.address | escape }}</p>
 	    {% endif %}
           </div>
         </div>
