--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -11,7 +11,7 @@
           <h3 class="mt-2 mb-2">
             <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
           </h3>
-          <div class="text-muted post-body mb-2">{{ post.content | strip_html | truncate: 140 }}</div>
+          <div class="text-muted post-body mb-2">{{ post.content | truncate: 140 }}</div>
         </div>
         <!-- POST MAIN IMAGE FIELD -->
         {% if post.main-image %}
