rework separator for twitter feed

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -100,7 +100,8 @@ layout: default
         </div>
 	<!-- TWITTER FEED -->
 	{% if site.twitter-embed %}
-	  <div class="hidden-xs-down">
+	   <div class="hidden-xs-down">
+	   <hr class="mt-4 mb-3">
 	    {{ site.twitter-embed }}
 	  </div>
 	{% endif %}
