add code for facebook feed on homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -107,6 +107,13 @@ layout: default
 	    {{ site.twitter-embed }}
 	  </div>
 	{% endif %}
+	<!-- FACEBOOK FEED -->
+	{% if site.facebook_feed %}
+	  <div class="hidden-xs-down">
+	  <hr class="mt-4 mb-3">
+	    {{ site.facebook_feed }}
+	  </div>
+	{% endif %}
         <!-- SUCCESSES -->
         {% if site.successes %}
           <!-- <div class="spacer"></div> -->
