Add twitter feed to site footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
     {% if site.twitter-feed %}
       <div class="justify-content-left container-fluid">
-	      {{ twitter-feed }}
+	      {{ site.twitter-feed }}
       </div>
     {% endif %}
 
