Add twitter feed to site footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <!-- FOOTER -->
 <nav class="navbar navbar-inverse pt-4 pb-4 bg-inverse navbar-toggleable-md mb-0">
 
-    {% if site.twitter-feed %}
+    {% if site.twitter-embed %}
       <div class="justify-content-left container-fluid">
-	      {{ site.twitter-feed }}
+	      {{ site.twitter-embed }}
       </div>
     {% endif %}
 
