Add Facebook feed to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,11 +37,11 @@
 
   <div class="spacer clearfix"></div>
 
-  {% if site.facebook_feed %}
-    <div class="justify-content-right container-fluid">
-      {{ site.facebook_feed %}
-    </div>
-  {% endif %}
+    {% if site.facebook_feed %}
+      <div class="justify-content-right container-fluid">
+	      {{ site.facebook_feed }}
+      </div>
+    {% endif %}
 
 </nav>
 
