Have emails to team leads open in new tab

--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -27,13 +27,13 @@ layout: default
               <li class="list-group-item">
 		      <small style="text-align: center;">JOIN THE TEAM<br />CLICK BELOW</small>
               <br>
-              <a href="mailto:{{ email-subscribe }}">{{ page.team-email }}+subscribe
+              <a href="mailto:{{ email-subscribe }}" target="_blank">{{ page.team-email }}+subscribe
                   <br><small>{{ email-domain }}</small></a>
               </li>
               <li class="list-group-item">
 		      <small style="text-align: center;">CONTACT THE TEAM LEADERS<br />CLICK BELOW</small>
               <br>
-              <a href="mailto:{{ email-owner }}">{{ page.team-email }}+owner
+              <a href="mailto:{{ email-owner }}" target="_blank">{{ page.team-email }}+owner
                   <br><small>{{ email-domain }}</small></a>
               </li>
             {% else %}
