--- a/_includes/sort-by-date.html
+++ b/_includes/sort-by-date.html
@@ -27,7 +27,9 @@ The return variable is S_posts, the array of sorted posts.
 {% assign S_event_index = 0 %}
 {% assign S_action_index = 0 %}
 
-{% assign S_posts = site.emptyArray %}
+{% assign emptyArray = "|split: " %}
+
+{% assign S_posts = emptyArray %}
 
 {% for S_update in S_updates %}
   {% assign S_posts = S_posts | push: S_update %}
