Change all instances of Partner Event to Other Event

--- a/_includes/event-post-header.html
+++ b/_includes/event-post-header.html
@@ -6,8 +6,8 @@
         {% if post.event-start-date %}
         <div class="col-2 col-sm-3 col-lg-2">
           <center>
-		  {% if post.tags contains 'partner' %}
-		  <span class="badge badge-partner">Partner<br />Event</span>
+		  {% if post.tags contains 'other' %}
+		  <span class="badge badge-partner">Other<br />Event</span>
 		  {% else %}
 		    <span class="badge badge-primary">Event</span>
 		  {% endif %}
